--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en" class="dark">
-<!-- <html lang="en" class="light"> -->
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chat.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buddy</title>
+    <title>SpingChat</title>
     <script>
-      // var global = window;
       var global = globalThis;
     </script>
   </head>
